--- a/one.html
+++ b/one.html
@@ -78,12 +78,12 @@
             <td>Row 1,Cell 4</td>
         <tr>
             <tr>
-                <td>Row 1,Cell 1</td>
+                <td>Row 2,Cell 2</td>
+                <td colspan="2" rowspan="2" bgcolor="#FFFEDF">Row 2,Cell 3</td>
             </tr>
             <tr>
                 <td bgcolor="#F4A480">Row 3,Cell 1</td>
-                <td bgcolor="#D3D3D3">Row 3,Cell 2</td>
-                <td colspan="2" bgcolor="#FFFEDF">Row 2,Cell 3</td>
+                <td bgcolor="#D3D3D3">Row 3,Cell 2</td>   
             </tr>
          </tr>
          <tr>
